Resolves: tdf#151919 mark blanked fields as requiring a reformat

the next time a format is requested, even if the value of the
Formatter is the same, otherwise if the value is the same it
will remain blank.

Change-Id: Iec77e6d9f792b51a83a9e289cbdb197605ab1a21
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157224
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>